# kaijutsu

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  almost-but-not-quite.md  build.rs  kaijutsu.capnp
crates/kaijutsu-abc/: Cargo.toml
crates/kaijutsu-abc/docs/: abc-spec-cache.md
crates/kaijutsu-abc/src/: ast.rs  feedback.rs  lib.rs  midi.rs
crates/kaijutsu-abc/src/engrave/: font.rs  ir.rs  layout.rs  mod.rs  svg.rs
crates/kaijutsu-abc/src/parser/: body.rs  header.rs  key.rs  mod.rs  note.rs
crates/kaijutsu-abc/tests/: alt_decorations.rs  beam_break.rs  broken_rhythm.rs  clefs_and_voices.rs  continuation_lines.rs  decorations.rs  engrave_tests.rs  file_header_inheritance.rs  fixture_tests.rs  grace_notes.rs  inline_info_fields.rs  key_attributes.rs  line_continuation.rs  lyrics.rs  lyrics_render.rs  nth_ending.rs  parse_mode.rs  repeats_and_endings.rs  robustness.rs  spec_fixtures.rs  symbol_lines.rs  ties_and_slurs.rs  voice_overlay.rs
crates/kaijutsu-abc/tests/fixtures/: accidentals.abc  chameleon_vamp.abc  chords.abc  durations.abc  keys.abc  repeats.abc  simple_melody.abc  three_voices.abc  ties.abc  triplets.abc  two_voices.abc
crates/kaijutsu-agent-tools/: Cargo.toml
crates/kaijutsu-agent-tools/src/: claude.rs  lib.rs
crates/kaijutsu-app/: Cargo.toml  README.md
crates/kaijutsu-app/assets/defaults/: bindings.rhai  theme.rhai
crates/kaijutsu-app/assets/frames/: cyberpunk.frame.ron  minimal.frame.ron
crates/kaijutsu-app/assets/shaders/: common.wgsl  corner.wgsl
crates/kaijutsu-app/examples/: midi_clock.rs
crates/kaijutsu-app/src/: audio.rs  audio_sched.rs  constants.rs  main.rs  metronome.rs  midi.rs  midi_in.rs  patch_graph.rs
crates/kaijutsu-app/src/agents/: components.rs  mod.rs  plugin.rs  registry.rs  systems.rs
crates/kaijutsu-app/src/cell/: block_border.rs  components.rs  fieldset.rs  frame_assembly.rs  frame_style.rs  measure.rs  mod.rs  plugin.rs  sync.rs  systems.rs
crates/kaijutsu-app/src/commands/: conversation.rs  mod.rs
crates/kaijutsu-app/src/config/: mod.rs
crates/kaijutsu-app/src/connection/: actor_plugin.rs  bootstrap.rs  bridge.rs  client_id.rs  mod.rs  share_dial.rs
crates/kaijutsu-app/src/conversation/: mod.rs  registry.rs
crates/kaijutsu-app/src/dashboard/: mod.rs  seat_selector.rs
crates/kaijutsu-app/src/dj/: audio.rs  core.rs  midi.rs  mod.rs  prefetch.rs  thread.rs
crates/kaijutsu-app/src/input/: action.rs  binding.rs  bindings_config.rs  context.rs  defaults.rs  dispatch.rs  escape.rs  events.rs  focus.rs  interrupt.rs  map.rs  mod.rs  prefix.rs  rhai_config.rs  scroll_config.rs  sequence.rs  systems.rs  tap.rs
crates/kaijutsu-app/src/kaish/: mod.rs
crates/kaijutsu-app/src/llm/: mod.rs
crates/kaijutsu-audio/: Cargo.toml
crates/kaijutsu-audio/src/: capture.rs  clip.rs  clockin.rs  lib.rs  timebase.rs
crates/kaijutsu-cas/: Cargo.toml
crates/kaijutsu-cas/src/: config.rs  hash.rs  lib.rs  metadata.rs  staging.rs  store.rs
crates/kaijutsu-client/: Cargo.toml  build.rs  kaijutsu.capnp
crates/kaijutsu-client/examples/: sftp_probe.rs
crates/kaijutsu-client/src/: actor.rs  constants.rs  document_store.rs  lib.rs  rpc.rs  sftp.rs  share_server.rs  ssh.rs  subscriptions.rs  sync.rs  synced_document.rs  synced_input.rs
crates/kaijutsu-crdt/: Cargo.toml
crates/kaijutsu-crdt/src/: block.rs  block_store.rs  content.rs  dag.rs  document.rs  error.rs  ids.rs  kv_document.rs  lib.rs  ops.rs  selection.rs
crates/kaijutsu-editor/: Cargo.toml
crates/kaijutsu-editor/src/: lib.rs
crates/kaijutsu-hyoushigi/: Cargo.toml
crates/kaijutsu-hyoushigi/src/: cell.rs  content.rs  engine.rs  lib.rs  materialize.rs  resolver.rs
crates/kaijutsu-index/: Cargo.toml
crates/kaijutsu-index/examples/: embed_check.rs
crates/kaijutsu-index/src/: cluster.rs  config.rs  content.rs  embedder.rs  index.rs  lib.rs  metadata.rs  synthesis.rs  watcher.rs
crates/kaijutsu-kernel/: Cargo.toml
crates/kaijutsu-kernel/src/: agents.rs  block_store.rs  cell_tools.rs  config_backend.rs  config_doc.rs  config_seed.rs  control.rs  conversation.rs  conversation_db.rs  crdt.rs  db.rs  drift.rs  editor.rs  execution.rs  flows.rs  git_engine.rs  git_ops.rs  input_doc.rs  kernel.rs  kernel_db.rs  kv.rs  lib.rs  mcp_config.rs  mcp_pool.rs  peers.rs  rhai_engine.rs  script.rs  seed_presets.rs  seed_scripts.rs  state.rs  tools.rs
crates/kaijutsu-kernel/tests/: broker_e2e.rs  rc_role_bindings.rs
crates/kaijutsu-mcp/: Cargo.toml  README.md
crates/kaijutsu-mcp/src/: doc_task.rs  helpers.rs  hook_listener.rs  hook_types.rs  lib.rs  main.rs  models.rs  tree.rs
crates/kaijutsu-mcp/tests/: adapter_mapping.rs  e2e_shell.rs  hook_remote_e2e.rs
crates/kaijutsu-rhai/: Cargo.toml
crates/kaijutsu-rhai/src/: catalog.rs  color.rs  format.rs  lib.rs  math.rs  output.rs  scope.rs  theme.rs
crates/kaijutsu-server/: Cargo.toml  build.rs  kaijutsu.capnp
crates/kaijutsu-server/src/: auth_db.rs  beat.rs  clock.rs  composite_backend.rs  constants.rs  context_engine.rs  docs_filesystem.rs  drift.rs  embedded_kaish.rs  git_backend.rs  git_filesystem.rs  input_filesystem.rs  interrupt.rs  kaish.rs  kaish_backend.rs  kaish_engine.rs  kj_builtin.rs  lib.rs  llm_stream.rs  main.rs  mount_backend.rs  render.rs  rpc.rs  sftp.rs  share.rs  ssh.rs  synthesis_rhai.rs
crates/kaijutsu-server/tests/: context_sync.rs  e2e_dispatch.rs  e2e_kj_workflow.rs  editor_wire.rs  genesis_bootstrap.rs  live_eval.rs  peer_e2e.rs  reconnect_fsm.rs  rpc_integration.rs  sftp_adapter.rs  sftp_transport.rs  share_adapter.rs  vfs_activity_wire.rs
crates/kaijutsu-telemetry/: Cargo.toml
crates/kaijutsu-telemetry/src/: lib.rs  metrics.rs  otel.rs
crates/kaijutsu-types/: Cargo.toml  README.md
crates/kaijutsu-types/src/: block.rs  codec.rs  compaction.rs  context.rs  enums.rs  error_block.rs  ids.rs  kernel.rs  lib.rs  paths.rs  principal.rs  session.rs  share.rs  theme.rs  tick.rs  timeout.rs  track.rs
crates/kaijutsu-types/tests/: compile_fail.rs
crates/kaijutsu-viz/: Cargo.toml
crates/kaijutsu-viz/src/: fsn.rs  join.rs  layout.rs  lib.rs  scales.rs
(+739 files in other folders)
