[workspace]
resolver = "2"
members = [
    "crates/kaijutsu-crdt",
    "crates/kaijutsu-kernel",
    "crates/kaijutsu-client",
    "crates/kaijutsu-server",
    "crates/kaijutsu-app",
    "crates/kaijutsu-mcp",
    "crates/kaijutsu-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/atobey/kaijutsu"

[workspace.dependencies]
# Kaijutsu CRDT (block-based document model)
kaijutsu-crdt = { path = "crates/kaijutsu-crdt" }

# Kaijutsu kernel (core VFS + state)
kaijutsu-kernel = { path = "crates/kaijutsu-kernel" }

# Kaijutsu RPC client
kaijutsu-client = { path = "crates/kaijutsu-client" }

# Kaish (execution engine + client)
kaish-kernel = "0.1.8"
kaish-glob = "0.1.8"

# Cap'n Proto
capnp = "0.25"
capnp-rpc = "0.25"
capnpc = "0.25"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# SSH
russh = "0.56"

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
whoami = "1.5"

# Testing
async-trait = "0.1"

# Utilities
rand = "0.8"  # must match russh's dependency
shellexpand = "3"

# Bevy Remote Protocol (debugging)
bevy_remote = "0.18"
bevy_brp_extras = "0.18"

# Text rendering
cosmic-text = "0.16"
pulldown-cmark = "0.12"

# CRDT + Persistence
diamond-types-extended = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }

# Scripting
rhai = "1.21"

# LLM providers - unified via rig-core
rig-core = "0.30"

# MCP (Model Context Protocol)
rmcp = { version = "0.14", features = ["client", "transport-child-process"] }

# Kaijutsu telemetry
kaijutsu-telemetry = { path = "crates/kaijutsu-telemetry" }

# OpenTelemetry
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["tonic"] }
tracing-opentelemetry = "0.31"
