[workspace]
resolver = "2"
members = [
    "crates/kaijutsu-types",
    "crates/kaijutsu-crdt",
    "crates/kaijutsu-kernel",
    "crates/kaijutsu-client",
    "crates/kaijutsu-server",
    "crates/kaijutsu-app",
    "crates/kaijutsu-mcp",
    "crates/kaijutsu-telemetry",
    "crates/kaijutsu-agent-tools",
    "crates/kaijutsu-index",
    "crates/kaijutsu-rhai",
    "crates/kaijutsu-abc",
    "crates/kaijutsu-cas",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/atobey/kaijutsu"

[workspace.dependencies]
# Internal crates
kaijutsu-abc = { path = "crates/kaijutsu-abc" }
kaijutsu-cas = { path = "crates/kaijutsu-cas" }
kaijutsu-types = { path = "crates/kaijutsu-types" }
kaijutsu-crdt = { path = "crates/kaijutsu-crdt" }
kaijutsu-kernel = { path = "crates/kaijutsu-kernel" }
kaijutsu-client = { path = "crates/kaijutsu-client" }
kaijutsu-rhai = { path = "crates/kaijutsu-rhai" }
kaijutsu-telemetry = { path = "crates/kaijutsu-telemetry" }
kaijutsu-agent-tools = { path = "crates/kaijutsu-agent-tools" }

# Kaish (execution engine + client) — local path until next release
kaish-kernel = { path = "../kaish/crates/kaish-kernel" }
kaish-glob = { path = "../kaish/crates/kaish-glob" }

# Cap'n Proto
capnp = "0.25"
capnp-rpc = "0.25"
capnpc = "0.25"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# SSH
russh = "0.60"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
whoami = "1.5"
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
strum = { version = "0.26", features = ["derive"] }
regex = "1"
dirs = "6"
hostname = "0.3"
dunce = "1"
indexmap = "2"

# Async utilities
async-trait = "0.1"

# Concurrency
dashmap = "6"
parking_lot = "0.12"

# RNG — pinned to 0.8 by diamond-types-extended (jumprope)
rand = "0.8"
shellexpand = "3"

# Bevy Remote Protocol (debugging)
bevy_remote = "0.18"
bevy_brp_extras = "0.18"
bevy_mesh = "0.18"

# Geometry primitives (transitive dep via vello — zero new compiled code)
kurbo = "0.13"

# Text rendering
cosmic-text = "0.16"   # pinned by Bevy 0.18
pulldown-cmark = "0.13"

# CRDT + Persistence
diamond-types-extended = "0.2"
rusqlite = { version = "0.39", features = ["bundled"] }

# Scripting
rhai = { version = "1.24", features = ["sync"] }
palette = { version = "0.7", default-features = false, features = ["std"] }

# LLM providers - unified via rig-core
rig-core = "0.34"

# MCP (Model Context Protocol)
rmcp = { version = "1.4", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

# Vi-modal editing (keystroke → semantic action state machine)
modalkit = { path = "../research/modalkit/crates/modalkit" }
editor-types = { path = "../research/modalkit/crates/editor-types" }
crossterm = "0.28.1"  # pinned by modalkit

# System clipboard
arboard = { version = "3", features = ["wayland-data-control"] }

# Tracing + OpenTelemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.32"

# Testing
tempfile = "3"

# Config
ron = "0.12"
