[package]
name = "kaijutsu-abc"
version.workspace = true
edition.workspace = true
description = "ABC music notation parser, engraver, and MIDI generator"

[dependencies]
winnow = "0.6"
serde = { workspace = true }
thiserror = { workspace = true }
skrifa = "0.40"
kurbo.workspace = true

[dev-dependencies]
pretty_assertions = "1"
