[package]
name = "kaijutsu-agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent detection and session correlation for MCP servers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
