[package]
name = "kaijutsu-app"
version.workspace = true
edition.workspace = true
description = "Bevy GUI client for kaijutsu"

[features]
# Opt-in only (dev iteration). Compiles Bevy as a shared library so incremental
# rebuilds skip re-linking all of Bevy statically — the big iteration win.
# The dev loop (contrib/kaijutsu-runner.sh) passes `--features dynamic_linking`
# for debug builds; release builds omit it so they stay self-contained.
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
kaijutsu-abc.workspace = true
kaijutsu-crdt.workspace = true
kaijutsu-client.workspace = true
kaijutsu-kernel.workspace = true
kaijutsu-types.workspace = true
kaijutsu-telemetry.workspace = true

# kaish (for syntax validation)
kaish-kernel.workspace = true
logos = "0.16"

bevy = { version = "0.18", features = ["default", "bevy_ui_debug"] }
bevy_brp_extras.workspace = true
bevy_mesh.workspace = true
bevy_remote.workspace = true
bevy_tweening = { git = "https://github.com/djeedai/bevy_tweening", branch = "main" }
avian2d = "0.6"

# Text rendering (Vello-based + MSDF)
# bevy_vello escape (docs/bevy_vello-escape.md): direct vello/parley/kurbo/peniko
# deps, version-locked to the fork's pins so Cargo dedups to the same crate
# instances. Lets us swap raw-scene imports off bevy_vello before owning the
# renderer (phase 2). `picking` feature dropped — zero customers (MeshPickingPlugin).
bevy_vello = { path = "/home/atobey/src/wt/pr6", features = ["text", "svg"] }
vello = "0.7.0"
parley = "0.7.0"
kurbo = "0.13.0"
peniko = "0.6.0"
pulldown-cmark.workspace = true
bytemuck = { version = "1.21", features = ["derive"] }
msdfgen = { path = "/home/atobey/src/msdfgen-rs", default-features = false, features = ["ttf-parser"] }
ttf-parser = "0.19"
rect_packer = "0.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

thiserror.workspace = true
arboard.workspace = true
modalkit.workspace = true
editor-types.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
log.workspace = true
whoami.workspace = true
indexmap = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
hostname = { workspace = true }

# Cap'n Proto
capnp.workspace = true
capnp-rpc.workspace = true

# Configuration
toml = { workspace = true }

[dev-dependencies]
image = "0.25"
crossbeam-channel = "0.5"
tempfile = "3"
pollster = "0.4"
