[package]
name = "kaijutsu-app"
version.workspace = true
edition.workspace = true
description = "Bevy GUI client for kaijutsu"

[features]
# Opt-in only (dev iteration). Compiles Bevy as a shared library so incremental
# rebuilds skip re-linking all of Bevy statically — the big iteration win.
# The dev loop (contrib/kaijutsu-runner.sh) passes `--features dynamic_linking`
# for debug builds; release builds omit it so they stay self-contained.
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
kaijutsu-abc.workspace = true
kaijutsu-audio.workspace = true
kaijutsu-cas.workspace = true
kaijutsu-crdt.workspace = true
kaijutsu-client.workspace = true
kaijutsu-kernel.workspace = true
crossbeam-channel = "0.5"
kaijutsu-types.workspace = true
kaijutsu-viz.workspace = true
kaijutsu-telemetry.workspace = true

# Direct rodio dep (docs/pcm.md R5 — the app owns rodio outright, decided
# 2026-07-16): `audio_sched.rs`'s scheduler thread builds the `OutputStream`
# and decodes/trims/gains samples; bevy_audio no longer plays anything
# (main.rs disables `AudioPlugin`). "wav" + "vorbis" match what bevy_audio's
# "wav" feature + bevy's default "vorbis" used to decode — same formats, one
# fewer layer. bevy still pulls rodio 0.20 transitively (see the `bevy` dep
# comment below); same semver range, so cpal/rodio dedupe to one copy.
rodio = { version = "0.20", default-features = false, features = ["wav", "vorbis"] }

# kaish (for syntax validation)
kaish-kernel.workspace = true
logos = "0.16"

# bevy_audio's PLUGIN is disabled at runtime (main.rs — the app owns rodio
# directly, docs/pcm.md R5) but the CRATE still compiles as part of bevy's
# "default" feature set (bevy_audio's own default pulls in rodio/vorbis) —
# dropping "wav" here is deliberate: no code here spawns bevy_audio types
# anymore, so there's nothing left to decode WAV *through bevy*. Dropping
# bevy_audio from the build entirely (full feature enumeration instead of
# "default") is deliberate follow-up hygiene, NOT this lane (docs/pcm.md R5).
bevy = { version = "0.18", features = ["default", "bevy_ui_debug"] }
bevy_brp_extras.workspace = true
bevy_mesh.workspace = true
bevy_remote.workspace = true
bevy_tweening = { git = "https://github.com/djeedai/bevy_tweening", branch = "main" }
avian2d = "0.6"

# Text rendering (Vello-based + MSDF): we own the rasterizer + shaping +
# scene→texture primitive. Direct vello stack, version-pinned so vello_svg 0.9
# dedups onto vello 0.7.
vello = "0.7.0"
vello_svg = "0.9.0"
parley = "0.7.0"
kurbo = "0.13.0"
peniko = "0.6.0"
pulldown-cmark.workspace = true
bytemuck = { version = "1.21", features = ["derive"] }
msdfgen = { version = "0.2.1", default-features = false, features = ["ttf-parser"] }
ttf-parser = "0.18"
rect_packer = "0.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

thiserror.workspace = true
arboard.workspace = true
modalkit.workspace = true
editor-types.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
log.workspace = true
whoami.workspace = true
# /r client shares (docs/slash-r.md): serves ShareHandler over the dedicated
# kaijutsu-share subsystem connection (share_dial.rs).
russh-sftp.workspace = true
indexmap = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
hostname = { workspace = true }

# Cap'n Proto
capnp.workspace = true
capnp-rpc.workspace = true

# Configuration
toml = { workspace = true }

# ALSA sequencer MIDI-out sink (docs/pcm.md slice 5c / docs/midi.md "Render is a
# wire cue"): the app is the first MIDI sink. Linux-only, same crate/version as
# the server's soon-to-be-demolished AlsaMidiOut.
[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[dev-dependencies]
image = "0.25"
tempfile = "3"
pollster = "0.4"
