[package]
name = "kaijutsu-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFI-free audio render seam: AudioRenderTarget trait + AudioRef/AudioFormatHint wire types"

[dependencies]
kaijutsu-cas = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
