[package]
name = "kaijutsu-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFI-free render + capture seam: RenderCue out, CaptureBatch in, LocalBeat timebase, Shape A clip record"

[dependencies]
kaijutsu-cas = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
