[package]
name = "kaijutsu-cas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content Addressable Storage for Kaijutsu"

[dependencies]
blake3 = "1"
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
