[package]
name = "kaijutsu-client"
version.workspace = true
edition.workspace = true
description = "Cap'n Proto RPC client library for kaijutsu"

[dependencies]
capnp.workspace = true
capnp-rpc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
russh.workspace = true
rand.workspace = true
rand_v10 = { package = "rand", version = "0.10" }
log.workspace = true
thiserror.workspace = true
whoami.workspace = true
home = "0.5"
serde_json = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
kaijutsu-telemetry.workspace = true

# CRDT engine
diamond-types-extended.workspace = true

# Shared CRDT types
kaijutsu-crdt.workspace = true
kaijutsu-types.workspace = true

[build-dependencies]
capnpc.workspace = true

[dev-dependencies]
env_logger.workspace = true
