[package]
name = "kaijutsu-crdt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Block-based CRDT document model for Kaijutsu"

[dependencies]
# Unified CRDT library with Map/Set/Register/Text support
# Provides all CRDT types needed for block document model
diamond-types.workspace = true

# SmartString (same as diamond-types uses)
smartstring = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "2"

[dev-dependencies]
rand = "0.8"
