[package]
name = "kaijutsu-crdt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Block-based CRDT document model for Kaijutsu"

[dependencies]
kaijutsu-types.workspace = true
diamond-types-extended.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
