[package]
name = "kaijutsu-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure vi editing engine (EditorCore) — modalkit-driven, no Bevy/kernel/RPC"

[dependencies]
modalkit = { workspace = true }
editor-types = { workspace = true }
