[package]
name = "kaijutsu-hyoushigi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "拍子木 — kaijutsu's timing substrate: timelines, cells, resolvers, speculation"

[features]
# Test-only helpers exported across crates (e.g. injecting a committed cell whose
# bytes are absent from CAS, to exercise the materializer's bail-on-missing-bytes
# path from the kernel crate). Never enabled in production builds.
test-util = []

[dependencies]
kaijutsu-types = { workspace = true }
kaijutsu-cas = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
