[package]
name = "kaijutsu-index"
version.workspace = true
edition.workspace = true
description = "Semantic vector indexing for kaijutsu contexts"

[dependencies]
kaijutsu-types = { path = "../kaijutsu-types" }

# ONNX inference + tokenizer
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# Vector index
hnsw_rs = "0.3"
anndists = "0.1"

# Clustering
petal-clustering = "0.13"
ndarray = "0.17"

# Metadata store
rusqlite.workspace = true

# Async (for watcher)
tokio = { version = "1", features = ["sync", "time", "rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"

# Content hashing
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
