[package]
name = "kaijutsu-index"
version.workspace = true
edition.workspace = true
description = "Semantic vector indexing for kaijutsu contexts"

[dependencies]
kaijutsu-types.workspace = true

# ONNX inference + tokenizer
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# Vector index
hnsw_rs = "0.3"
anndists = "0.1"

# Clustering
petal-clustering = "0.13"
ndarray = "0.17"

# Metadata store
rusqlite.workspace = true

# Async
tokio = { version = "1", features = ["sync", "time", "rt"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Content hashing
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
