[package]
name = "kaijutsu-kernel"
version.workspace = true
edition.workspace = true
description = "Core kernel with VFS abstraction for kaijutsu"

[dependencies]
tokio = { version = "1", features = ["fs", "sync", "time", "io-util"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
dunce = "1.0"
regex = "1"

# CRDT (diamond-types-extended with Map/Set/Register/Text)
diamond-types-extended.workspace = true
kaijutsu-crdt = { path = "../kaijutsu-crdt" }

# Concurrency
dashmap = "6"
parking_lot = "0.12"

# Persistence
rusqlite.workspace = true

# Enum string conversion
strum = { version = "0.26", features = ["derive"] }

# File watching
notify = "7"

# Config parsing (for validation)
ron = "0.9"

# Scripting
rhai.workspace = true

# LLM providers - unified via rig-core
rig-core.workspace = true

# File pattern matching (gitignore + globstar support)
kaish-glob = { workspace = true }

# Git operations (libgit2)
git2 = "0.19"

# Async streams
futures = "0.3"

# MCP (Model Context Protocol)
rmcp.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
git2 = "0.19"
