[package]
name = "kaijutsu-kernel"
version.workspace = true
edition.workspace = true
description = "Core kernel with VFS abstraction for kaijutsu"

[dependencies]
tokio = { version = "1", features = ["fs", "sync", "time", "io-util"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dunce = { workspace = true }
regex = { workspace = true }

# CRDT
diamond-types-extended.workspace = true
kaijutsu-crdt.workspace = true
kaijutsu-types.workspace = true
kaijutsu-cas.workspace = true

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Persistence
rusqlite.workspace = true

# Enum string conversion
strum = { workspace = true }

# File watching
notify = "7"

# Config parsing
ron = { workspace = true }
toml = { workspace = true }

# Scripting
rhai.workspace = true
kaijutsu-rhai.workspace = true

# ABC music notation
kaijutsu-abc.workspace = true

# SVG validation (kernel-side, same version as bevy_vello's dependency)
usvg = "0.46"

# LLM providers
rig-core.workspace = true

# File pattern matching
kaish-glob.workspace = true
kaish-kernel.workspace = true

# Path expansion
shellexpand.workspace = true

# Async streams
futures = { workspace = true }

# Topic-partitioned pub/sub
async-broadcast = "0.7"

# MCP
rmcp.workspace = true

# Base64 (transitive dep via rmcp/rig — zero new compiled code)
base64 = "0.22"

[features]
test-mock = []

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
