[package]
name = "kaijutsu-kernel"
version.workspace = true
edition.workspace = true
description = "Core kernel with VFS abstraction for kaijutsu"

[dependencies]
tokio = { version = "1", features = ["fs", "sync", "time", "io-util"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dunce = { workspace = true }
regex = { workspace = true }
include_dir = { workspace = true }
clap = { workspace = true }

# CRDT
diamond-types-extended.workspace = true
kaijutsu-crdt.workspace = true
kaijutsu-types.workspace = true
kaijutsu-editor.workspace = true
kaijutsu-cas.workspace = true

# Audio render seam (docs/pcm.md) — AudioRef/AudioFormatHint for `kj play`.
kaijutsu-audio.workspace = true

# Hyoushigi — per-context timeline engine (the beat substrate)
kaijutsu-hyoushigi.workspace = true

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Persistence
rusqlite.workspace = true

# Enum string conversion
strum = { workspace = true }

# File watching
notify = "7"

# Config parsing
toml = { workspace = true }


# ABC music notation
kaijutsu-abc.workspace = true

# SVG validation (kernel-side)
usvg = "0.46"

# File pattern matching
kaish-glob.workspace = true
kaish-kernel.workspace = true

# gitignore classification for Vfs.snapshot's `ignored` flag (docs/scenes/vfs.md)
ignore.workspace = true

# Semantic vector index (used by runtime/synthesis + kj_builtin)
kaijutsu-index = { path = "../kaijutsu-index" }

# Path expansion
shellexpand.workspace = true

# Async streams
futures = { workspace = true }

# Topic-partitioned pub/sub
async-broadcast = "0.7"

# MCP
rmcp = { workspace = true, features = ["server", "macros"] }

# JSON schema derivation for tool Params structs (Phase 1 tool redesign)
schemars = { version = "1.0", features = ["chrono04"] }

# CancellationToken for tool-call cancellation plumbing
tokio-util = { version = "0.7" }

# Telemetry — W3C trace context injection into CallContext
kaijutsu-telemetry.workspace = true

# Base64 (transitive dep via rmcp — zero new compiled code)
base64 = "0.22"

# Claude provider: HTTP + SSE streaming (Phase 2 unrig).
# Default features pull rustls + platform verifier (no OpenSSL).
reqwest = { version = "0.13", features = ["json", "stream"] }
eventsource-stream = "0.2"
bytes = "1"

[features]
test-mock = []

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
# Enable the cross-crate test-only helpers (e.g. push_committed_for_test) for the
# kernel's own tests — feature unification makes this dev-only.
kaijutsu-hyoushigi = { workspace = true, features = ["test-util"] }
