[package]
name = "kaijutsu-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server exposing kaijutsu CRDT kernel to Claude Code, Gemini CLI, and opencode"

[[bin]]
name = "kaijutsu-mcp"
path = "src/main.rs"

[dependencies]
kaijutsu-kernel.workspace = true
kaijutsu-crdt.workspace = true
kaijutsu-client.workspace = true
kaijutsu-agent-tools.workspace = true
kaijutsu-telemetry.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
whoami.workspace = true
clap.workspace = true

# MCP server
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
schemars = { version = "1.0", features = ["chrono04"] }

# XDG paths
dirs = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Search
regex = { workspace = true }
