[package]
name = "kaijutsu-rhai"
version.workspace = true
edition.workspace = true
description = "Unified Rhai stdlib for kaijutsu — math, color, format, output capture"

[dependencies]
rhai.workspace = true
palette = { version = "0.7", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
