[package]
name = "kaijutsu-rhai"
version.workspace = true
edition.workspace = true
description = "Unified Rhai stdlib for kaijutsu — math, color, format, output capture"

[dependencies]
rhai.workspace = true
palette.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
