[package]
name = "kaijutsu-server"
version.workspace = true
edition.workspace = true
description = "SSH + Cap'n Proto server for kaijutsu"

[dependencies]
# Kaijutsu kernel (VFS + state + control plane)
kaijutsu-kernel.workspace = true
kaijutsu-crdt.workspace = true

# Kaish execution engine (spawned as subprocess, connected via IPC)
kaish-kernel.workspace = true
kaish-client.workspace = true

capnp.workspace = true
capnp-rpc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
russh.workspace = true
log.workspace = true
env_logger.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
shellexpand.workspace = true
async-trait.workspace = true
rand.workspace = true
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
dashmap = "6"
tracing = "0.1"

# File watching for external tool changes (cargo, clippy, etc.)
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }

# Hostname detection for default seat ID
hostname = "0.3"

# No separate russh-keys needed - russh 0.56 includes keys module

[build-dependencies]
capnpc.workspace = true

[dev-dependencies]
kaijutsu-client = { path = "../kaijutsu-client" }
kaijutsu-kernel = { path = "../kaijutsu-kernel" }
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
git2 = "0.19"
